adjusting a bunch of the desktop sizes, can't get the media query to works, so not bothering with phone set up

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <head>
     <title>
       Lab 1
-    </title>
-    <link rel="stylesheet" href="/styles/style.css" />
-  </head>
+      </title>
   
   <body>
     <header>
@@ -26,22 +24,22 @@
   
     <main>
       <section class="deck">
-        <div class="card">b</div>
+        <div class="card special">b</div>
         <section id="innerBox">
 
-            <div class="card">c</div>
-            <div class="card">d</div>
+            <div class="tier1 card">c</div>
+            <div class="card tier1">d</div>
 
                 <section>
-                <div class="card">e</div>
-                <div class="card">f</div>
+                <div class="card tier2">e</div>
+                <div class="card tier2">f</div>
                 </section>
 
                 <section>
-                <div class="card">g</div>
-                <div class="card">h</div>
+                <div class="card tier2">g</div>
+                <div class="card tier2">h</div>
                 </section>
-                <div class="card">i</div>
+                <div class="card tier3">i</div>
                 </section>
                 
         </section>
