--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <body>
     <header>
-      <nav class="menu">
+      <nav class="deck card">
         <div>
             <p>a</p>
         </div>
