--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="tier1 card">c</div>
             <div class="card tier1">d</div>
 
-                <section>
+                <section class="wrapper">
                     <div class="card tier2">e</div>
                     <div class="card tier2">f</div>
                 </section>
 
-                <section>
+                <section class="wrapper">
                     <div class="card tier2">g</div>
                     <div class="card tier2">h</div>
                 </section>
