disaster happened out of thin air

--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
   
     <main>
       <section class="deck">
-        <div class="card special">b</div>
+        <div class="card special"><p>b</p></div>
 
         <div id="innerBox">
 
             <div class="tier1 card">c</div>
-            <div class="card tier1">d</div>
+            <div class="card tier1"><p>d</p</div>
 
                 <section class="wrapper">
-                    <div class="card tier2">e</div>
-                    <div class="card tier2">f</div>
+                    <div class="card tier2"><p>e</p</div>
+                    <div class="card tier2"><p>f</p</div>
                 </section>
 
                 <section class="wrapper">
-                    <div class="card tier2">g</div>
-                    <div class="card tier2">h</div>
+                    <div class="card tier2"><p>g</p</div>
+                    <div class="card tier2"><p>h</p</div>
                 </section>
 
-                <div class="card tier3">i</div>
+                <div class="card tier3"><p>i</p</div>
     
                 
         </div>
