--- a/index.html
+++ b/index.html
@@ -18,13 +18,26 @@
   <body>
     <header>
       <nav class="menu">
-        <div>
+        <!-- <div>
             <p>a</p>
-        </div>
+        </div> -->
       </nav>
     </header>
+
+
+    <div class="wrapper">
+      <div class="a">a</div>
+      <div class="b">b</div>
+      <div class="c">c</div>
+      <div class="d">d</div>
+      <div class="e">e</div>
+      <div class="f">f</div>
+      <div class="g">g</div>
+      <div class="h">h</div>
+      <div class="i">i</div>
+    </div>
   
-    <main>
+    <!-- <main>
       <section class="deck">
         <div class="card">b</div>
         <section id="innerBox">
@@ -48,7 +61,7 @@
      
       </section>
     
-    </main>
+    </main> -->
   
   </body>
   
